# rdma-manager

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
gtest/: CMakeLists.txt
gtest/memory/: TestCudaMemory.cc  TestCudaMemory.h  TestMainMemory.cc  TestMainMemory.h
gtest/proto/: TestProtoServer.cc  TestProtoServer.h
gtest/rdma/: TestRDMAServer.cc  TestRDMAServer.h  TestRDMAServerMCast.cc  TestRDMAServerMCast.h  TestRDMAServerMultClients.cc  TestRDMAServerMultClients.h  TestRDMAServerSRQ.cc  TestRDMAServerSRQ.h  TestRDMAServerXRC.cc  TestRDMAServerXRC.h  TestSimpleUD.cc  TestSimpleUD.h
gtest/thread/: TestThread.cc  TestThread.h
gtest/utils/: TestConfig.cc  TestConfig.h
perftest/: AtomicsBandwidthPerfTest.cc  AtomicsBandwidthPerfTest.h  AtomicsLatencyPerfTest.cc  AtomicsLatencyPerfTest.h  AtomicsOperationsCountPerfTest.cc  AtomicsOperationsCountPerfTest.h  BandwidthPerfTest.cc  BandwidthPerfTest.h  CMakeLists.txt  LatencyPerfTest.cc  LatencyPerfTest.h  MainPerf.cc  MainPerfTest.cc  MulticastOrderTest.cc  MulticastPerf.h  MulticastPerfLat.h  OperationsCountPerfTest.cc  OperationsCountPerfTest.h  PerfTest.h  PerfTests.h  PlotResults.py  RPCPerf.cc  RPCPerf.h  RemoteMemoryPerf.cc  RemoteMemoryPerf.h  RemoteScanPerf.h  XRC_RemoteMemoryPerf.cc  XRC_RemoteMemoryPerf.h  rdma_server_aggregator.hpp
perftest/distexperiments/experiments/: compile.py  config.py  general_memory_experiment.py  m_to_n.py  m_to_one.py  one_to_one.py
perftest_old/: CMakeLists.txt  FetchAndAddPerf.cc  FetchAndAddPerf.h  MainPerf.cc  MulticastOrderTest.h  MulticastPerf.cc  MulticastPerfLat.cc  MulticastPerfLat.h  PerfTest.h  PerfTests.h  RPCPerf.cc  RemoteMemoryPerf.cc  SwMulticastPerf.h
perftest_tmp/: BandwidthPerfTest.cc  BandwidthPerfTest.h  CMakeLists.txt  MainPerfTest.cc  PerfTest.h  XRC_BandwidthPerfTest.cc  XRC_BandwidthPerfTest.h
src/: CMakeLists.txt
src/RPC/: CMakeLists.txt  RPCHandlerThread.h  RPCVoidHandlerThread.h
src/conf/: RDMA.conf
src/memory/: AbstractBaseMemory.cc  AbstractBaseMemory.h  AbstractCudaMemory.cc  AbstractCudaMemory.h  AbstractMainMemory.cc  AbstractMainMemory.h  BaseMemory.cc  BaseMemory.h  CMakeLists.txt  CTestTestfile.cmake  CudaMemory.cc  CudaMemory.cu  CudaMemory.h  LocalBaseMemoryStub.cc  LocalBaseMemoryStub.h  LocalCudaMemoryStub.cc  LocalCudaMemoryStub.h  LocalMainMemoryStub.cc  LocalMainMemoryStub.h  MainMemory.cc  MainMemory.h  Makefile  Memory.cpp  Memory.h  MemoryFactory.h  cmake_install.cmake
src/message/: CMakeLists.txt  HelloMessage.proto  MemoryResourceRequest.proto  MemoryResourceResponse.proto  MessageErrors.h  MessageTypes.h  ProtoMessageFactory.h  RDMAConnDisconnect.proto  RDMAConnRequest.proto  RDMAConnRequestMgmt.proto  RDMAConnResponse.proto  RDMAConnResponseMgmt.proto
src/perftest/: CMakeLists.txt  MulticastPerf.cc  MulticastPerf.h  PerfTest.h  PerfTests.h  RPCPerf.h  RemoteMemoryPerf.cc  RemoteMemoryPerf.h  RemoteScanPerf.cc  RemoteScanPerf.h  SwMulticastPerf.cc  SwMulticastPerf.h
src/proto/: CMakeLists.txt  ProtoClient.cc  ProtoClient.h  ProtoSendSocket.cc  ProtoSendSocket.h  ProtoServer.cc  ProtoServer.h  ProtoSocket.cc  ProtoSocket.h
src/rdma/: BaseRDMA.cc  BaseRDMA.h  CMakeLists.txt  ExReliableRDMA.cc  ExReliableRDMA.h  NodeIDSequencer.cc  NodeIDSequencer.h  RDMAClient.cc  RDMAClient.h  RDMAManager.cc  RDMAManager.h  RDMAManagerRC.cc  RDMAManagerRC.h  RDMAManagerUD.cc  RDMAManagerUD.h  RDMAServer.cc  RDMAServer.h  ReliableRDMA.cc  ReliableRDMA.h  UnreliableRDMA.cc  UnreliableRDMA.h
src/thread/: CMakeLists.txt  Thread.cc  Thread.h
src/utils/: CMakeLists.txt  Config.cc  Config.h  CpuNumaUtils.h  Filehelper.h  GpuNumaUtils.h  Logging.h  Network.h  RandomHelper.h  RdmaCounter.h  StringHelper.h
test/: CMakeLists.txt  Main.cc  MainPerf.cc  TestProtoServer.h  TestRDMAServer.cc  TestRDMAServer.h  TestRDMAServerMCast.cc  TestRDMAServerMCast.h  TestRDMAServerMultClients.cc  TestRDMAServerMultClients.h  TestRunner.cc  TestSimpleUD.h  Tests.h
test/RPC/: CMakeLists.txt  TestRPC.cc  TestRPC.h
test/proto/: CMakeLists.txt  TestProtoServer.cc  TestProtoServer.h
test/rdma/: CMakeLists.txt  TestRDMAServer.cc  TestRDMAServer.h  TestRDMAServerMCast.cc  TestRDMAServerMCast.h  TestRDMAServerMultClients.cc  TestRDMAServerMultClients.h  TestRDMAServerSRQ.cc  TestRDMAServerSRQ.h  TestSimpleUD.cc  TestSimpleUD.h
test/thread/: CMakeLists.txt  TestThread.cc  TestThread.h
test/utils/: CMakeLists.txt  TestConfig.cc  TestConfig.h
test_old/RPC/: TestRPC.h
